--- a/geonode/templates/base.html
+++ b/geonode/templates/base.html
@@ -35,7 +35,7 @@
 
     <title>{% block title %}{{ SITE_NAME }}{% endblock %}</title>
 
-    <link rel="shortcut icon" href="{% static 'geonode/img/favicon.ico' %}" />
+    <link rel="shortcut icon" href="{% static 'custom/logo/favicon.png' %}" />
     <link href="{% static "lib/css/ol.css" %}" rel="stylesheet" />
     <script src="{% static "lib/js/ol.js" %}"></script>
 
