--- a/static/custom/scss/components/_form.scss
+++ b/static/custom/scss/components/_form.scss
@@ -46,3 +46,8 @@ label.checkbox input[type="checkbox"], label.checkbox-inline input[type="checkbo
     margin-left: 0;
     margin-right: 10px;
 }
+
+
+ul.errorlist > li {
+  color: red;
+}
