--- a/static/custom/scss/site_base.css
+++ b/static/custom/scss/site_base.css
@@ -51,6 +51,9 @@ label.checkbox input[type="checkbox"], label.checkbox-inline input[type="checkbo
   margin-left: 0;
   margin-right: 10px; }
 
+ul.errorlist > li {
+  color: red; }
+
 .panel {
   border-radius: 12px !important;
   overflow: hidden;
